created public folder structure and html inputs to apply to handlebars files for sign up, login, user profile, pet profile

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
   <title>PetTrax</title>
 </head>
 
@@ -11,7 +12,7 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1>
-        <span role="img" aria-label="money">💸</span>
+        <span role="img" aria-label="PetTrax"></span>
         <a href="/">PetTrax</a>
       </h1>
       <nav>
