updated readme file with section headers and description, added to profile.js in public folder for linking with handlebars file

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -11,10 +11,17 @@
     <form class="pettrax-profile-form">
       <div class="form-group">
         <label for="pettrax-name">name:</label>
-        <input class="form-input" type="text" id="pettrax-name" />
+        <input class="form-input" type="text" id="pettrax-name" placeholder="name"/>
       </div>
-      <label for="pettrax-address">address:</label>
-      <input class="form-input" type="text" id="pettrax-address" name="pettrax-address" />
+      <div>
+        <label for="pettrax-address">address:</label>
+        <input class="form-input" type="text" id="pettrax-street" name="pettrax-street" placeholder="street"/>
+        <input class="form-input" type="text" id="pettrax-city" name="pettrax-city" placeholder="city"/>
+        </div>
+        <div>
+      <input class="form-input" type="text" id="pettrax-state" name="pettrax-state" placeholder="state"/>
+      <label for="pettrax-address"></label>
+       <input class="form-input" type="text" id="pettrax-zipcode" name="pettrax-zipcode" placeholder="zipcode"/>
   </div>
   <div class="form-group">
     <label for="pettrax-phone">phone:</label>
@@ -32,30 +39,30 @@
     <form class="pet-profile-form"></form>
     <div class="form-group">
       <label for="pet-name">pet name:</label>
-      <input class="form-input" type="text" id="pettrax-name" />
+      <input class="form-input" type="text" id="pet-name" />
     </div>
     <label for="pet-birthday">birthday:</label>
-    <input class="form-input" type="text" id="pet-birthday" name="pet-birthday" />
+    <input class="form-input" type="text" id="pet-birthday" name="pet-birthday" placeholder="birthday" />
   </div>
   <div class="form-group">
     <label for="pet-species">species:</label>
-    <input class="form-input" type="number" id="pet-species" name="pet-species" />
+    <input class="form-input" type="number" id="pet-species" name="pet-species" placeholder="species" />
   </div>
   <div class="form-group">
       <label for="pet-breed">breed:</label>
-      <input class="form-input" type="number" id="pet-breed" name="pet-breed" />
+      <input class="form-input" type="number" id="pet-breed" name="pet-breed" placeholder="breed"/>
     </div>
   <div class="form-group">
     <label for="pet-weight">weight:</label>
-    <input class="form-input" type="number" id="pet-weight" name="pet-weight" />
+    <input class="form-input" type="number" id="pet-weight" name="pet-weight" placeholder="weight" />
   </div>
   <div class="form-group">
     <label for="species">color:</label>
-    <input class="form-input" type="number" id="pet-color" name="pet-color" />
+    <input class="form-input" type="number" id="pet-color" name="pet-color" placeholder="color" />
   </div>
   <div class="form-group">
     <label for="species">birthmark:</label>
-    <input class="form-input" type="number" id="pet-birthmark" name="pet-birthmark" />
+    <input class="form-input" type="number" id="pet-birthmark" name="pet-birthmark" placeholder="birthmark" />
   </div>
   <div class="form-group">
     <p>more about your pet:</p>
