updated js files in public folder for functionality with handlebars files, updated readme to appropriare sections and explaination

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -30,7 +30,7 @@
         <input class="form-input" type="text" id="ice-name" placeholder="contact name"/>
       </div>
       <div class="form-group">
-        <label for="pettrax-phone">relationship:</label>
+        <label for="ice-relationship">relationship:</label>
         <input class="form-input" type="number" id="ice-relationship" name="ice-relationship" placeholder="relationship"/>
       </div>
       <div class="form-group">
