initial dashboard + menu pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,12 +12,12 @@
 
 /*********** FONTS IMPORT if link in HTML doesn't work ***********/
 /*  'IBM Plex Sans', sans-serif  */
-/* @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;700&display=swap"); */
+/* @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap"); */
 
 /*  'Merienda', cursive  */
 /* @import url("https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap"); */
 
-/************************* BODY STYLES *******************/
+/************************* ELEMENT STYLES *******************/
 body {
   font-family: var(--IBMsans);
   font-size: 16px;
@@ -26,24 +26,44 @@ body {
 }
 
 header {
+  display: flex;
   background-color: var(--Slate);
+  width: 100vw;
+  height: 4em;
+  padding: 0.5em;
+  margin-bottom: 1em;
 }
 
 h2 {
   font-family: var(--Merienda);
   font-size: 2em;
-  font-weight: 700;
+  font-weight: 400;
   color: var(--Slate);
 }
 
-.login-page {
-  background-color: var(--LightSlate);
-  background-image: url(../img/Paw-pattern-Slate.png);
-  background-repeat: repeat;
+h3 {
+  font-family: var(--IBMsans);
+  font-size: 1.7em;
+  font-weight: 700;
 }
 
-.menu-page {
-  background-color: var(--SkyBlue);
+h3 > a {
+  color: var(--Slate);
+  text-decoration: none;
+}
+
+h3 > a:hover {
+  color: var(--Slate);
+  text-decoration: underline;
+}
+
+p {
+  font-family: var(--IBMsans);
+}
+
+nav {
+  display: flex;
+  justify-items: stretch;
 }
 
 nav a {
@@ -55,12 +75,8 @@ nav a {
   letter-spacing: 0.05em;
 }
 
-.navlink a {
-  text-decoration: none;
-}
-
-.navlink a:hover {
-  text-decoration: underline;
+nav a:hover {
+  color: var(--Lime);
 }
 
 input {
@@ -69,10 +85,6 @@ input {
   font-size: 1em;
   font-weight: 400;
   color: var(--LightSlate);
-}
-
-.halfinput {
-  width: 40%;
 }
 
 form {
@@ -90,17 +102,6 @@ button {
   letter-spacing: 0.05em;
 }
 
-.inversebutton {
-  width: 100%;
-  background-color: var(--LightSlate);
-  color: var(--Lime);
-  border: 1px solid;
-  border-color: var(--Lime);
-  font-family: var(--IBMsans);
-  font-size: 1.3em;
-  font-weight: 400;
-}
-
 textarea {
   min-width: 100%;
   min-height: 100%;
@@ -115,4 +116,81 @@ textarea {
 textarea:focus {
   outline: 3px solid var(--Slate);
   background-color: var(--LightSlate);
+}
+
+/************************* CLASS STYLES *******************/
+
+.vertical-center {
+  min-height: 100%; /* Fallback for browsers do NOT support vh unit */
+  min-height: 100vh; /* These two lines are counted as one :-)       */
+  display: flex;
+  align-items: center;
+}
+
+.login-page {
+  background-color: var(--LightSlate);
+  background-image: url(../img/Paw-pattern-Slate.png);
+  background-repeat: repeat;
+}
+
+.menu-page {
+  background-color: var(--SkyBlue);
+}
+
+.dashboard-page {
+  background-color: var(--LightSlate);
+}
+
+.halfinput {
+  width: 40%;
+}
+
+.inversebutton {
+  width: 100%;
+  background-color: var(--LightSlate);
+  color: var(--Lime);
+  border: 1px solid;
+  border-color: var(--Lime);
+  font-family: var(--IBMsans);
+  font-size: 1.1em;
+  font-weight: 400;
+}
+
+.inversebutton:hover {
+  background-color: var(--Slate);
+}
+
+.breadcrumb {
+  font-family: var(--IBMsans);
+  font-weight: 400;
+  font-size: 0.7em;
+  color: var(--Slate);
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  text-decoration: none;
+}
+
+.breadcrumb:hover {
+  text-decoration: underline;
+  color: var(--Slate);
+}
+
+.card-img-top {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  border: 4px solid var(--Lime);
+}
+
+.pet-card {
+}
+
+.pet-pic {
+  width: 125px;
+  height: 125px;
+  border-radius: 50%;
+  border: 6px solid var(--Slate);
+}
+
+.pet-name {
 }
