updating public js files to correspond with handlebars views with correct GET, PUT, POST, DELETE Routes for each page in the app

--- a/views/ice.handlebars
+++ b/views/ice.handlebars
@@ -1,27 +1,4 @@
-<div class="row">
-  <div class="col-md-6">
-    <h3>Vet Contact Info</h3>
-    <form class="vet-contact-form">
-      <div class="form-group">
-        <label for="vet-name">name:</label>
-        <input class="form-input" type="text" id="vet-name" />
-      </div>
-      <div class="form-group">
-      <label for="vet-address">address:</label>
-      <textarea class="form-input" type="text" id="vet-address" name="vet-address" placeholder="address"></textarea>
-    <div class="form-group">
-    <label for="vet-phone">phone:</label>
-    <input class="form-input" type="number" id="vet-phone" name="vet-phone" />
-   </div>
-    <div class="form-group">
-    <button type="submit" class="btn btn-primary">Save</button>
-    <button type="submit" class="btn btn-primary">Edit</button>
-    </form>
-  </div>
-</div>
-
-
-<div class="row">
+<div class="row"
   <div class="col-md-6">
     <h3>Emergency Contact Info</h3>
     <form class="ice-contact-form">
@@ -48,6 +25,7 @@
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="submit" class="btn btn-primary">Edit</button>
+        <button type="submit" class="btn btn-primary">Delete</button>
       </div>
     </form>
   </div>
