--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-6">
      <h1>Welcome to PetTrax</h1>
-    <form class="form-signin">       
+    <form class="login-form">       
       <h2>Please login</h2>
       <div class="form-group">
         <label for="email-signin">email:</label>
@@ -18,23 +18,5 @@
   </div>
   
   
-  <div class="col-md-6">
-    <h2>Sign up</h2>
-
-    <form class="form signup-form">
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">sign up</button>
-      </div>
-    </form>
-  </div>
-</div>
-
+  
 <script src="./js/login.js"></script>
