worked on file structure for seeds publice folder, unable to login to front end, server connected and GET request successful from api

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
-{{#each users as |user| }}
-<div class="row align-center mb-5>
+if {{#each users as |user|}}
+<div class="row align-center mb-5"></div>
   <div class="col-md-6">
     <h2>{{{user.email}}} {{user.name}}</h2>
   </div>
