--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -1,10 +1,9 @@
-<body class="container menu-page">
+<div class="container menu-page">
 
   <header class="container header">
     <div class="col-12">
       <nav class="d-flex justify-content-between">
         <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
-        <a href="menu.html">Menu</a>
       </nav>
     </div>
   </header>
@@ -19,15 +18,14 @@
       <h3><a href="#">Pets</a></h3>
       <h3><a href="#">Groups</a></h3>
       <h3><a href="#">Logs</a></h3>
-      <h3><a href="#">Emergency</a></h3>
+      <h3><a href="#">Contacts</a></h3>
     </div>
   </div>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  </div>
+
+  {{!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"> --}}
   <!-- CUSTOM SCRIPTS -->
-  {{!-- <script src="./js/login.js"></script> --}}
-
-</body>
-
+  <script src="./js/menu.js"></script>
 
