--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,3 @@
- {{!-- <title>PetTrax: caretaking made easy</title>
-</head> --}}
-
 <div class="container login-page vertical-center">
   <!-- Main vertical wrapper -->
   <div class="col">
@@ -8,18 +5,23 @@
     <div class="row justify-content-center">
       <!-- Login form wrapper -->
       <div class="col col-10 col-md-6">
-        <form>
+         <form class="login-form" type="text" for="login" action="dashboard.handlebars" method="POST">
+        <!-- <form action="./js/login.js" method="POST"> -->
           <img src="./img/PetTrax_Logo-login.svg" alt="PetTrax logo"><br><br>
-          <input type="email" id="email" name="email" placeholder="email address" required><br>
-          <input type="password" id="password" name="password" placeholder="password" required><br><br>
+          <input type="email" id="email" name="email" placeholder="email" required><br>
+          <input type="current-password" id="current-password" name="current-password" placeholder="current-password" required><br><br>
           <button id="submit" type="submit">LOG IN</button>
-        </form><br><br>
-        <button type="button" class="inversebutton" onclick="return signupFormHandler()">new user? sign up</button>
+          <br>
+          <br>
+        <button type="button" class="inversebutton" onclick="signupFormHandler()">new user? sign up</button>
+        </form>
       </div>
     </div>
+  </div>
+  
   </div>
 
   <!-- CUSTOM SCRIPTS -->
   <script src="./js/login.js"></script>
 
-</div>
+
