--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,22 +1,34 @@
-<div class="col-md-6">
-    <h2>Sign up</h2>
+<div class="container menu-page">
 
-    <form class="signup-form">
-      <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">sign up</button>
-      </div>
-    </form>
+  <header class="container header">
+    <div class="col-12">
+      <nav class="d-flex justify-content-between">
+        <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Main horizontal wrapper -->
+  <div class="row justify-content-center">
+    <!-- Login form wrapper -->
+    <div class="col col-10 col-md-6">
+      <h2>Start Tracking</h2>
+      <form class="signup-form" type="text" for="signup" action="add-pet.handlebars" method="POST">
+        <!-- <form class='signup-form'type=text for=sign-up action="./js/login.js" method="POST"> This page should go where? Dashboard or Menu first?-->
+        <input class="form-input" type="name" id="name" placeholder="name" />
+        <input class="form-input" type="street" id="street" name="street" placeholder="street address" />
+        <input class="form-input" type="city" id="city" name="city" placeholder="city" />
+        <input class="form-input" type="state" id="state" name="state" placeholder="state" />
+        <input class="form-input" type="number" id="zipcode" name="zipcode" placeholder="zipcode" />
+        <input class="form-input" type="email" id="email" name="email" placeholder="email address" required><br>
+        <input class="form-input" type="password" id="password" name="password" placeholder="password" required>
+        <br><br>
+        <button type="submit" value="submit">SIGN UP</button>
+      </form>
+    </div>
   </div>
-</div>
 
+  </div>
 
 
 <script src="./js/signup.js"></script>
