--- a/views/vet.handlebars
+++ b/views/vet.handlebars
@@ -1,19 +1,10 @@
 <div class="row">
   <div class="col-md-6">
     <h3>Vet Contact Info</h3>
-    <form class="vet-contact-form">
-      <div class="form-group">
-        <label for="vet-name">name:</label>
+    <form class="vet-form">
         <input class="form-input" type="text" id="vet-name" />
-      </div>
-      <div class="form-group">
-      <label for="vet-address">address:</label>
-      <textarea class="form-input" type="text" id="vet-address" name="vet-address" placeholder="address"></textarea>
-    <div class="form-group">
-    <label for="vet-phone">phone:</label>
+      <input class="form-input" type="text" id="vet-address" name="vet-address" placeholder="address"></textarea>
     <input class="form-input" type="number" id="vet-phone" name="vet-phone" />
-   </div>
-    <div class="form-group">
     <button type="submit" class="btn btn-primary">Save</button>
     <button type="submit" class="btn btn-primary">Edit</button>
     <button type="submit" class="btn btn-primary">Delete</button>
