fixed homerouts & login error

--- a/views/menu.handlebars
+++ b/views/menu.handlebars
@@ -12,13 +12,13 @@
   <div class="row justify-content-center">
     <!-- Login form wrapper -->
     <div class="col col-10 col-md-6">
-      <a href="dashboard.html" class="breadcrumb"><< Back to Dashboard</a>
+      <a id="dashboard" href="#" class="breadcrumb"><< Back to Dashboard</a>
       <h2>Menu</h2><br>
-      <h3><a href="#">Profile</a></h3>
-      <h3><a href="#">Pets</a></h3>
-      <h3><a href="#">Groups</a></h3>
-      <h3><a href="#">Logs</a></h3>
-      <h3><a href="#">Contacts</a></h3>
+      <h3><a id="profile" href="#">Profile</a></h3>
+      <h3><a id="pets" href="#">Pets</a></h3>
+      <h3><a id="groups" href="#">Groups</a></h3>
+      <h3><a id="logs" href="#">Logs</a></h3>
+      <h3><a id="contacts" href="#">Contacts</a></h3>
     </div>
   </div>
 
