delete not used js files. update profile files.

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -31,10 +31,10 @@
     <div class="col col-10 col-md-6">
       <!-- <a href="dashboard.html" class="breadcrumb"><< Back to Dashboard</a> -->
       <h2>Profile</h2><br>
-      <h3>{{user.name}}</h3>
-      <h3>{{user.address}}</h3>
-      <h3>{{user.phone}}</h3>
-      <h3>{{user.email}}</h3>
+      <h3 id="user-name"></h3>
+      <h3 id="user-address"></h3>
+      <h3 id="user-phone"></h3>
+      <h3 id="user-email"></h3>
       <br>
       <button type="submit" value="submit">EDIT</button>
     </div>
