got profile workinggit add . whoo

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
           <button id="submit" type="submit">LOG IN</button>
           <br>
           <br>
-        <button type="button" class="inversebutton" onclick="signupFormHandler()">new user? sign up</button>
+        <button type="button" class="inversebutton" id="signUp">new user? sign up</button>
         </form>
       </div>
     </div>
@@ -23,5 +23,3 @@
 
   <!-- CUSTOM SCRIPTS -->
   <script src="./js/login.js"></script>
-
-
