--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,17 +13,18 @@
     <!-- Login form wrapper -->
     <div class="col col-10 col-md-6">
       <h2>Start Tracking</h2>
-      <form class="signup-form" type="text" for="signup" action="add-pet.handlebars" method="POST">
+      <form class="signup-form" type="text">
         <!-- <form class='signup-form'type=text for=sign-up action="./js/login.js" method="POST"> This page should go where? Dashboard or Menu first?-->
         <input class="form-input" type="name" id="name" placeholder="name" />
         <input class="form-input" type="street" id="street" name="street" placeholder="street address" />
         <input class="form-input" type="city" id="city" name="city" placeholder="city" />
         <input class="form-input" type="state" id="state" name="state" placeholder="state" />
         <input class="form-input" type="number" id="zipcode" name="zipcode" placeholder="zipcode" />
+        <input class="form-input" type="phone" id="phone" name="phone" placeholder="phone" />
         <input class="form-input" type="email" id="email" name="email" placeholder="email address" required><br>
         <input class="form-input" type="password" id="password" name="password" placeholder="password" required>
         <br><br>
-        <button type="submit" value="submit">SIGN UP</button>
+        <button type="submit" id="submit" value="submit">SIGN UP</button>
       </form>
     </div>
   </div>
