got the add pet page working, including integrating cloudinary

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -31,10 +31,10 @@
     <div class="col col-10 col-md-6">
       <a id="dashboard" href="#" class="breadcrumb"><< Back to Dashboard</a>
       <h2>Profile</h2><br>
-      <p id="user-name">{{ name }}</p>
-      <p id="user-address">{{ address }}</p>
-      <p id="user-phone">{{ phone }}</p>
-      <p id="user-email">{{ email }}</p>
+      <p id="user-name">Name: <br> {{ name }}</p>
+      <p id="user-address">Address: <br> {{ address }}</p>
+      <p id="user-phone">Phone: <br> {{ phone }}</p>
+      <p id="user-email">Email: <br> {{ email }}</p>
       <br>
       <button type="submit" value="submit">EDIT</button>
     </div>
