--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,7 +4,7 @@
     <div class="col-12">
       <nav class="d-flex justify-content-between">
         <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
-        <a href="menu.html">Menu</a>
+        <a id="menu" href="#">Menu</a>
       </nav>
     </div>
   </header>
