got logs working!

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -32,7 +32,7 @@
         </div>
         <div class="col-3 text-center">
           <img src="./img/icons/Poo-icon.svg" alt="Poo Icon" class="event-icon">
-          <p class="event-name">Poo</p>
+          <p class="event-name">Poop</p>
         </div>
         <div class="col-3 text-center">
           <img src="./img/icons/Food-icon.svg" alt="Food Icon" class="event-icon">
