--- a/views/logs.handlebars
+++ b/views/logs.handlebars
@@ -13,7 +13,7 @@
       <a id="dashboard" href="#" class="breadcrumb"><< Back to Dashboard</a>
       <h2>Logs</h2><br>
 
-        <div class="dropdown">
+        {{!-- <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                 Select a Pet
             </button>
@@ -31,16 +31,18 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item event-choices" href="#">All</a></li>
-                <li><a class="dropdown-item event-choices" href="#">Pee</a></li>
-                <li><a class="dropdown-item event-choices" href="#">Poop</a></li>
-                <li><a class="dropdown-item event-choices" href="#">Food</a></li>
+                {{#each events as |event|}}
+                <li><a class="dropdown-item event-choices" href="#">{{ pet.events.eventType }}</a></li>
+                {{/each}}
             </ul>
         </div>
 
-        <button id="submit" type="submit" value="submit">FILTER</button>
+        <button id="submit" type="submit" value="submit">FILTER</button> --}}
 
-        {{#each events as |event|}}
-        <p id="logs">{{ pet.name }}, {{ event.eventType }}, {{ event.time}} </p>
+        {{#each pets as |pet|}}
+            {{#each events as |event|}}
+            <p id="logs">{{ pet.name }}, {{ event.eventType }}, {{ event.time }} </p>
+            {{/each}}
         {{/each}}
     </div>
   </div>
