IT ALL WORKSgit add . yay

--- a/views/add-pet.handlebars
+++ b/views/add-pet.handlebars
@@ -1,7 +1,8 @@
 <header class="container header">
     <div class="col-12">
       <nav class="d-flex justify-content-between">
-        <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
+        <a id="dashboard" href="#"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
+        <a id="menu" href="#">Menu</a>
       </nav>
     </div>
   </header>
@@ -26,7 +27,6 @@
         <!-- <form class='signup-form'type=text for=sign-up action="./js/login.js" method="POST"> This page should go where? Dashboard or Menu first?-->
         <input class="form-input" type="text" id="pet-name" name="name" placeholder="pet name" />
         <input class="form-input" type="text" id="pet-birthday" name="birthday" placeholder="pet birthday" />
-        <input class="form-input" type="text" id="pet-species" name="species" placeholder="species" />
         <input class="form-input" type="text" id="pet-breed" name="breed" placeholder="breed" />
         <input class="form-input" type="text" id="pet-weight" name="weight" placeholder="weight" />
         <input class="form-input" type="text" id="pet-color" name="color" placeholder="color" />
