--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -3,7 +3,7 @@
   <header class="container header">
     <div class="col-12">
       <nav class="d-flex justify-content-between">
-        <a href="dashboard.html"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
+        <a id="dashboard" href="#"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
         <a id="menu" href="#">Menu</a>
       </nav>
     </div>
