--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,8 +1,10 @@
-<div class="container dashboard-page">
+<body class="dashboard-page">
 
-  <header class="container header">
+<div class="dashboard-page">
+
+  <header class="header">
     <div class="col-12">
-      <nav class="d-flex justify-content-between">
+      <nav class="d-flex mx-2 justify-content-between align-items-center">
         <a id="dashboard" href="#"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
         <a id="menu" href="#">Menu</a>
       </nav>
@@ -26,15 +28,15 @@
 
       <!-- Event Icon Row: Poo, Pee, Food -->
       <div class="row d-flex justify-content-around my-3 py-3 border-top border-2 border-dark">
-        <div class="col-3 text-center">
+        <div id="event-card" class="col-3 text-center">
           <img src="./img/icons/Pee-icon.svg" alt="Pee Icon" class="event-icon">
           <p class="event-name">Pee</p>
         </div>
-        <div class="col-3 text-center">
+        <div id="event-card" class="col-3 text-center">
           <img src="./img/icons/Poo-icon.svg" alt="Poo Icon" class="event-icon">
           <p class="event-name">Poop</p>
         </div>
-        <div class="col-3 text-center">
+        <div id="event-card" class="col-3 text-center">
           <img src="./img/icons/Food-icon.svg" alt="Food Icon" class="event-icon">
           <p class="event-name">Food</p>
         </div>
