--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,8 +1,8 @@
-<body class="container menu-page">
+<body class="menu-page">
 
-  <header class="container header">
+  <header class="header">
     <div class="col-12">
-      <nav class="d-flex justify-content-between">
+      <nav class="d-flex mx-2 justify-content-between align-items-center">
         <a id="dashboard" href="#"><img src="./img/PetTrax_Logo-Nav.svg" alt="PetTrax logo" width="200px"></a>
         <a id="menu" href="#">Menu</a>
       </nav>
