fixed password input type on login page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
         <!-- <form action="./js/login.js" method="POST"> -->
           <img src="./img/PetTrax_Logo-login.svg" alt="PetTrax logo"><br><br>
           <input type="email" id="email" name="email" placeholder="email" required><br>
-          <input type="current-password" id="password" name="current-password" placeholder="current-password" required><br><br>
+          <input type="password" id="password" name="current-password" placeholder="current-password" required><br><br>
           <button id="submit" type="submit">LOG IN</button>
           <br>
           <br>
